# bio_gen

./: .gitignore  Cargo.toml  README.md
crates/bio-bam/: Cargo.toml
crates/bio-bam/src/: bai.rs  bam.rs  bgzf.rs  error.rs  lib.rs  pileup.rs  reader.rs  varcall.rs
crates/bio-bam/tests/: bam_tests.rs  pileup_tests.rs  varcall_tests.rs
crates/bio-core/: Cargo.toml
crates/bio-core/examples/: pipeline.rs
crates/bio-core/src/: crispr.rs  error.rs  lib.rs  vcf.rs
crates/bio-core/src/analysis/: kmer.rs  mod.rs  orf.rs  restriction.rs  search.rs  stats.rs  translate.rs  variant.rs
crates/bio-core/src/parser/: fasta.rs  fastq.rs  mod.rs  stream.rs
crates/bio-core/src/sequence/: mod.rs  nucleotide.rs  record.rs
crates/bio-core/tests/: advanced_tests.rs  analysis_tests.rs  crispr_tests.rs  genomics_tests.rs  parser_tests.rs  sequence_tests.rs  stream_tests.rs  vcf_tests.rs
crates/bio-wasm/: Cargo.toml
crates/bio-wasm/src/: lib.rs
scripts/: build-wasm.sh  serve.sh
web/: index.html  sample.js  worker.js
