[package]
name = "bio-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings exposing bio-core to the browser"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bio-core = { path = "../bio-core" }
bio-bam = { path = "../bio-bam" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
